--- a/app/src/main/res/layout/fragment_facuilty_.xml
+++ b/app/src/main/res/layout/fragment_facuilty_.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/text_shadow_white"
     tools:context=".ui.faculity.Facuilty_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
