--- a/app/src/main/res/layout/fragment_gallery_.xml
+++ b/app/src/main/res/layout/fragment_gallery_.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.gallery.Gallery_Fragment"
-    android:background="#C6C2BE">
+    android:background="@color/text_shadow_white">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
