--- a/app/src/main/res/layout/gridview_layout.xml
+++ b/app/src/main/res/layout/gridview_layout.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:textSize="14sp"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:fontFamily="sans-serif"
+        android:textSize="14sp" />
 
 </LinearLayout>
